상품 관련 컴포넌트 생성 및 ui 기본 css 적용

--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,17 @@ textarea:focus {
 * {
   box-sizing: border-box;
 }
+
+/* Library */
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+section > h2 {
+  font-size: 1.25rem;
+  padding-left: 15px;
+  padding-bottom: 5px;
+  border-left: 3px solid #ff4e00;
+}
