firestore 데이터베이스 적용 1차

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -36,6 +36,10 @@
   color: makerOrange;
 }
 
+.current {
+  color: makerOrange;
+}
+
 @media (max-width: small) {
   .header {
     display: block;
