--- a/src/components/cart_item/cart_item.module.css
+++ b/src/components/cart_item/cart_item.module.css
@@ -70,6 +70,10 @@
   background-color: makerOrange;
 }
 
+.label {
+  padding-right: 5px;
+}
+
 @media (max-width: small) {
   .item {
     padding: 35px 0 20px 20px;
