--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -1,5 +1,6 @@
 @value makerBlack: #383838;
 @value makerOrange: #ff4e00;
 @value makerBlue: #008aff;
+@value makerLightBlue: #ebf6ff;
 @value makerLightGray: #ddd;
 @value makerGray: #999;
