--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,7 @@ section > h2 {
   padding-left: 15px;
   padding-bottom: 5px;
   border-left: 3px solid #ff4e00;
+  margin-bottom: 40px;
 }
 
 @media (max-width: 1024px) {
