게시글 상세 컴포넌트 추가

--- a/src/components/board_item/board_item.module.css
+++ b/src/components/board_item/board_item.module.css
@@ -1,4 +1,5 @@
 @value makerOrange, makerBlue, makerLightBlue, makerLightGray from 'common/colors.css';
+@value medium from 'common/sizes.css';
 
 .item {
   display: flex;
@@ -58,4 +59,11 @@
 .date {
   font-size: 0.875rem;
   color: makerBlue;
+}
+
+@media (max-width: medium) {
+  .item {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
 }
